assets/css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

body {
    background: cadetblue;

    padding: 0;
    margin: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
/* main header css styles */
#mainHeader {

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-bottom: 2rem;
    font-size: larger;
    margin-top: 10%;
}

/* main box css styles for the question area */
#mainBox {
    height: auto;
    width: auto;
    max-width: 80%;
    background-color: aliceblue;
    border-radius: 5%;
    padding: 10px;
    box-shadow: 0 0 15px 5px;

}
/* css styles for the answer area */
#answerArea {
    display: grid;
    justify-content: center;
    align-items: center;
    display: grid;
    grid-template-columns: repeat(1, auto);
    gap: 20px;
    padding: 10px 20px;

}
/* for all the buttons used */
.btn {
    color: aliceblue;

    border: 5px solid;
    border-radius: 5px;
    padding: 5px 10px;
    background-color: cadetblue;
    outline: none;
}

/* for button hover */
.btn:hover {
    border-color: black;
    cursor: pointer;
    color: black;
}

/* for when button for correct answer is chosen */
.btn.correct {
    background-color: hsl(163, 90%, 23%);
}

/* for when the button for wrong answer is chosen */
.btn.wrong {
    background-color: hsl(0, 89%, 65%);
}

/* for Start, Next and Exit buttons */
.start-Btn,
.next-Btn,
.exit-Btn {
    justify-content: space-around;
    align-items: center;
    font-size: 1.75rem;
    font-weight: bold;
    padding: 10px 20px;

}

/* for Start, Next and Exit buttons */
#quizManage {
    display: flex;
    justify-content: center;
    align-items: center;
}

.hide {
    display: none;
}

/* for footer section */
footer {
    margin-top: auto;
    color: aliceblue;
}

/* Media query for devices with max width 650px and below */
@media screen and (max-width: 650px) {
    #quizInfo {
        text-align: center;
        margin-left: 2rem;
        margin-right: 2rem;
    }
}

/* Media query for devices with max width 420px and below */
@media screen and (max-width: 420px) {
    footer {
        text-align: center;
    }
}

